--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-        <h1>From a static file</h1>
+        <h1>{{title}}</h1>
         <img src="/img/sush.jpeg" />
+        <h4> created by {{name}}</h4>
     </body>
 </html>
