header and footer

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-        <h3>01: {{question}}</h1>
-        <h4>An: {{answer}}</h4>
+        {{>header}}
+          <p>about</p>
+        {{>footer}}
     </body>
 </html>
