--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,7 +7,11 @@
     </head>
 
     <body>
-        <h1>{{title}}</h1>
-        <h4> created by {{name}}</h4>
+        {{>header}}
+
+        <h3>01: {{question}}</h1>
+        <h4>An: {{answer}}</h4>
+
+        {{>footer}}
     </body>
 </html>
