--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,8 +8,12 @@
     </head>
 
     <body>
-        <h1>{{title}}</h1>
+
+       {{>header}}
+
+        
         <img src="/img/sush.jpeg" />
-        <h4> created by {{name}}</h4>
+        
+        {{>footer}}
     </body>
 </html>
